# xcb-cpp

./: .gitmodules  .travis.yml  CMakeLists.txt  c_client.py  cxx_client.py  generate_header.cmake  include_workarounds.hpp.in  make_c_client.cmake  reply.hpp.in  request.hpp  static.hpp  template.hpp.in  void_call.hpp.in
examples/: CMakeLists.txt  randr_test.cpp
generator/: .gitignore  ast_util.py  cxx_client.py  namespaces.py  parse.py  template.h
test/: CMakeLists.txt  check_compiles.cpp.in  checked_atom_intern.cpp  exception.cpp  intern_atom.cpp  iterate_screens.cpp  list.cpp  test_connection.hpp  test_syntax.cpp.in  unchecked_atom_intern.cpp
